--- a/README.org
+++ b/README.org
@@ -1,25 +1,25 @@
 * CentOS重要目录说明
   根目录(/)下一般有如下目录
-  1. bin/
-	 可执行文件目录
-  2. sbin/
-	 可执行文件目录
-  3. usr/
-  4. boot/
-  5. etc/
-  6. proc/
-  7. dev/
-  8. home/
-  9. lib/ 或 lib64/
-  10. lost+found/
-  11. media/
-  12. mnt/
-  13. opt/
-  14. root/
-  15. selinux/
-  16. srv/
-  17. sys/
-  18. tmp/
-  19. var/
+  * bin/
+	可执行文件目录
+  * sbin/
+	可执行文件目录
+  * usr/
+  * boot/
+  * etc/
+  * proc/
+  * dev/
+  * home/
+  * lib/ 或 lib64/
+  * lost+found/
+  * media/
+  * mnt/
+  * opt/
+  * root/
+  * selinux/
+  * srv/
+  * sys/
+  * tmp/
+  * var/
 * 系统配置
 ** shell脚本
