--- a/README.org
+++ b/README.org
@@ -55,35 +55,35 @@
 	此时，系统已经进入到了等待用户输入username和password的时候了，你已经可以用自己的帐号登入系统了。
 ** Linux 重要目录说明
    根目录(/)下一般有如下目录
-*** bin/
-   	可执行文件目录
-*** sbin/
-   	与/bin/目录一样放置可执行文件，不过一般是root用户才用到的可执行文件。
-*** usr/
-*** boot/
-*** etc/
-*** proc/
-*** dev/
-   	设备文件目录。
-*** home/
-   	用户目录。
-*** lib/ 或 lib64/
-   	库文件目录。
-*** lost+found/
-   	回收目录。
-*** media/
-*** mnt/
-   	挂载设备对应的设备文件。
-*** opt/
-*** root/
-   	root用户的用户目录。
-*** selinux/
-*** srv/
-*** sys/
-   	系统目录。
-*** tmp/
-   	临时目录。该目录的访问权限为0777，也就是说任何用户对该目录都有全部的访问权限。
-*** var/
+   - bin/
+   	 可执行文件目录
+   - sbin/
+   	 与/bin/目录一样放置可执行文件，不过一般是root用户才用到的可执行文件。
+   - usr/
+   - boot/
+   - etc/
+   - proc/
+   - dev/
+   	 设备文件目录。
+   - home/
+   	 用户目录。
+   - lib/ 或 lib64/
+   	 库文件目录。
+   - lost+found/
+   	 回收目录。
+   - media/
+   - mnt/
+   	 挂载设备对应的设备文件。
+   - opt/
+   - root/
+   	 root用户的用户目录。
+   - selinux/
+   - srv/
+   - sys/
+   	 系统目录。
+   - tmp/
+   	 临时目录。该目录的访问权限为0777，也就是说任何用户对该目录都有全部的访问权限。
+   - var/
 ** Make工具
    我们可以利用 Make 工具帮助我们自动完成大部分繁琐且重复的配置及安装工作。大致上， Make 程序依如下流程工作：
    #+begin_src sh
