--- a/README.org
+++ b/README.org
@@ -243,10 +243,7 @@
            yum -y install GConf2-devel pkgconfig
            yum -y install libXft-devel
 	     #+end_src
-	   * step 3. *编译、安装* 跟大部分 Linux 下开源软件的源码安装步骤一样：
-         1) $ ./configure
-		 2) $ make
-		 3) $ make install
+	   * step 3. *编译、安装* 跟大部分 Linux 下开源软件的源码安装步骤一样：./configure && make && make install
 	 * yum 安装
 	   #+begin_src sh
          yum install -y emacs
