--- a/README.org
+++ b/README.org
@@ -141,6 +141,8 @@
       IPADDR=192.168.1.109 # IP地址(BOOTPROTO=static时有效)
       NETMASK=255.255.255.0 # 子网掩码
       GATEWAY=192.168.1.1 # 网关
+      DNS1=202.96.128.86
+      DNS2202.96.134.33
 	#+end_src
 *** 配置DNS
 	/etc目录下有名为resolv.conf的脚本，由它来指定本机的DNS服务器
