--- a/README.org
+++ b/README.org
@@ -142,7 +142,7 @@
       NETMASK=255.255.255.0 # 子网掩码
       GATEWAY=192.168.1.1 # 网关
       DNS1=202.96.128.86
-      DNS2202.96.134.33
+      DNS2=202.96.134.33
 	#+end_src
 *** 配置DNS
 	/etc目录下有名为resolv.conf的脚本，由它来指定本机的DNS服务器
